# app

./: .flutter-plugins-dependencies  .gitmodules  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/flutter_build/c2f1a9167b9818d741984a73ea232f87/: .filecache  dart_build.d  dart_build.stamp  dart_build_result.json  debug_android_application.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  outputs.json
.github/workflows/: build.yml
android/: build.gradle.kts  local.properties
android/app/: build.gradle.kts
android/app/src/cpp/: pdfium_wrapper.cpp
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  pdf_renderer.cpp  pdfium_wrapper.cpp
android/app/src/main/kotlin/com/devsoftware/pdf_reader_manager/: MainActivity.kt  PDFRendere.kt  PDFRenderer.kt
android/app/src/main/res/xml/: file_paths.xml
lib/: main.dart  pdf_native_service.dart
lib/web/: viewer.css.dart  viewer.html.dart  viewer.mjs.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
